# ProjectUniverse

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  gen-vc14-solution.bat
cmake/: FindOggVorbis.cmake
src/: CMakeLists.txt  README-WIN.txt  README.txt  gen-vc14-solution.bat  run.sh
src/applications/: CMakeLists.txt
src/applications/BrickLand/: BrickLand.cpp  BrickLand.hpp  CMakeLists.txt
src/applications/CrusaderNoMercy/: CMakeLists.txt  CrusaderNoMercy.cpp  CrusaderNoMercy.hpp
src/applications/Kaplacalypse/: CMakeLists.txt  Kaplacalypse.cpp  Kaplacalypse.hpp
src/applications/OpenDD/: CMakeLists.txt  OpenDD.cpp  OpenDD.hpp  car.hpp
src/applications/ProjectUniverse/: CMakeLists.txt  ProjectUniverse.cpp  ProjectUniverse.hpp
src/applications/XPsychoPig/: CMakeLists.txt  XPsychoPig.cpp  XPsychoPig.hpp
src/applications/appNull/: CMakeLists.txt  appNull.cpp  appNull.hpp
src/applications/appTest/: CMakeLists.txt  appTest.cpp  appTest.hpp  main.cpp
src/applications/appTest/tests/: protector.cpp  protector.hpp  testBasic.cpp  testRunner.cpp  testRunner.hpp  tests.cpp
src/applications/example/: CMakeLists.txt  example.cpp  example.hpp
src/applications/mduelX/: CMakeLists.txt  mduelX.cpp  mduelX.hpp
src/core/: CMakeLists.txt  application.cpp  application.hpp  engine.cpp  engine.hpp  engineFwd.hpp  engine_export.h  library.cpp  library.hpp  main.cpp
src/core/audio/: audioBuffer.cpp  audioBuffer.hpp
src/core/codecs/: audioCodec.cpp  audioCodec.hpp  codec.hpp  codecManager.cpp  codecManager.hpp  imageCodec.cpp  imageCodec.hpp  meshCodec.cpp  meshCodec.hpp
src/core/config/: config.cpp  config.hpp
src/core/console/: consolecommands.hpp
src/core/coretypes/: buffer.cpp  buffer.hpp  image.cpp  image.hpp
src/core/entity/: entity.cpp  entity.hpp
src/core/geom/: aabb.cpp  aabb.hpp  boundingSphere.cpp  boundingSphere.hpp  frustum.cpp  frustum.hpp  obb.cpp  octree.cpp  octree.hpp  plane.cpp  plane.hpp
src/core/geom/boundingVolume/: aabb.cpp  aabb.hpp  boundingSphere.cpp  boundingSphere.hpp  obb.cpp  obb.hpp
src/core/geom/curve/: curve.cpp  curve.hpp  curveBezier.cpp  curveBezier.hpp  curveLine.cpp  curveLine.hpp  curveNurbs.hpp  curvePolyline.cpp  curvePolyline.hpp
src/core/geom/mesh/: mesh.cpp  mesh.hpp
src/core/geom/surface/: surface.cpp  surface.hpp  surfaceBezier.hpp  surfaceNurbs.hpp  surfacePlane.cpp  surfacePlane.hpp  surfaceRevolution.hpp
src/core/input/: inputDevice.cpp  inputDevice.hpp  inputDeviceJoystick.cpp  inputDeviceJoystick.hpp  inputDeviceKeyboard.cpp  inputDeviceKeyboard.hpp  inputDeviceMouse.cpp  inputDeviceMouse.hpp  inputDeviceTouchscreen.cpp  inputDeviceTouchscreen.hpp  inputManager.cpp  inputManager.hpp  inputPlugin.cpp  inputPlugin.hpp
src/core/log/: logManager.cpp  logManager.hpp  logger.cpp  logger.hpp  loggerFile.cpp  loggerFile.hpp  loggerGroup.cpp  loggerGroup.hpp  loggerNull.cpp  loggerNull.hpp  loggerStream.cpp  loggerStream.hpp
src/core/math/: mat3.cpp  mat3.hpp  mat3.inl  mat4.cpp  mat4.hpp  mat4.inl  quaternion.cpp  quaternion.hpp  quaternion.inl  vec2.cpp  vec2.hpp  vec2.inl  vec3.cpp  vec3.hpp  vec3.inl  vec4.cpp  vec4.hpp  vec4.inl
src/core/plugin/: iplugin.cpp  iplugin.hpp  plugin.cpp  plugin.hpp  pluginApp.cpp  pluginApp.hpp  pluginLib.cpp  pluginLib.hpp  pluginManager.cpp  pluginManager.hpp
src/core/render/: bufferObject.cpp  bufferObject.hpp  fbo.cpp  fbo.hpp  gpuMesh.cpp  gpuMesh.hpp  rbo.cpp  rbo.hpp  renderManager.cpp  renderManager.hpp  renderMesh.cpp  renderMesh.hpp  renderPlugin.cpp  renderPlugin.hpp  shader.cpp  shader.hpp  shaderProgram.cpp  shaderProgram.hpp  texture.cpp  texture.hpp  vao.cpp  vao.hpp
src/core/render/renderNull/: bufferObject.cpp  bufferObject.hpp  fbo.cpp  fbo.hpp  rbo.cpp  rbo.hpp  shader.cpp  shader.hpp  shaderProgram.cpp  shaderProgram.hpp  texture.cpp  texture.hpp  vao.cpp  vao.hpp
src/core/render/renderOpenGL4/: bufferObject.cpp  bufferObject.hpp  fbo.cpp  fbo.hpp  rbo.cpp  rbo.hpp  shader.cpp  shader.hpp  shaderProgram.cpp  shaderProgram.hpp  texture.cpp  texture.hpp  vao.cpp  vao.hpp
src/core/render/windowContext/: windowContext.hpp
src/core/resource/: resource.cpp  resource.hpp  resourceFile.cpp  resourceFile.hpp  resourceManager.cpp  resourceManager.hpp  resourceManager.inl
src/core/scene/: scene.cpp  scene.hpp
src/core/script/lua/: engineLua.cpp  engineLua.hpp  testlua.cpp  testlua.hpp
src/core/tests/: testBasic.cpp  testBasic.hpp  testRunner.cpp  testRunner.hpp  tests.cpp  tests.hpp
src/core/tests/geom/: testAABB.cpp  testAABB.hpp  testBoundingSphere.cpp  testBoundingSphere.hpp  testCurve.cpp  testCurve.hpp  testFrustum.cpp  testFrustum.hpp  testGeom.cpp  testGeom.hpp  testOBB.cpp  testOBB.hpp  testPlane.cpp  testPlane.hpp
src/core/tests/math/: testMat.cpp  testMat.hpp  testMath.cpp  testMath.hpp  testVec.cpp  testVec.hpp
src/core/thread/: threadManager.cpp  threadManager.hpp
src/core/tools/: filetools.cpp  filetools.hpp  plugin.cpp  plugin.hpp  singleton.hpp  singleton.inl  timer.cpp  timer.hpp
src/core/windowContext/: windowContext.hpp  windowContextTypes.hpp  windowManager.cpp  windowManager.hpp  windowPlugin.cpp  windowPlugin.hpp
src/data/shaders/opengl21/: blob.fs  blob.prog  blob.vs  drawtri.fs  drawtri.vs  effect1.prog
src/data/shaders/opengl33/: drawtri.fs  drawtri.vs  normal.fs  normal.gs  normal.prog  normal.vs
src/data/shaders/opengl4/: drawtri.fs  drawtri.prog  drawtri.vs  effect1.fs  effect1.prog  effect1.ps  effect1.sp  effect1.vs
src/data/shaders/opengl45/: drawtri.fs  drawtri.vs  effect1.vs  normal.gs  normal.vs
src/plugins/: CMakeLists.txt
src/plugins/audio/: CMakeLists.txt
src/plugins/audio/audioFmod/: CMakeLists.txt  audioFmod.cpp  audioFmod.hpp
src/plugins/audioCodec/: CMakeLists.txt
src/plugins/imageCodec/: CMakeLists.txt
src/plugins/input/: CMakeLists.txt
src/plugins/loader/: CMakeLists.txt
src/plugins/meshCodec/: CMakeLists.txt
src/plugins/physics/: CMakeLists.txt
src/plugins/render/: CMakeLists.txt
src/plugins/videoCodec/: CMakeLists.txt
src/plugins/windowContext/: CMakeLists.txt
(+218 files in other folders)
