message(STATUS "Configuring applications...")

add_subdirectory(appNull)
add_subdirectory(appTest)
add_subdirectory(BrickLand)
add_subdirectory(CrusaderNoMercy)
add_subdirectory(Kaplacalypse)
add_subdirectory(mduelX)
add_subdirectory(OpenDD)
add_subdirectory(ProjectUniverse)
add_subdirectory(XPsychoPig)
