message(STATUS "Configuring plugins...")

add_subdirectory(audio)
add_subdirectory(audioCodec)
add_subdirectory(imageCodec)
add_subdirectory(meshCodec)
add_subdirectory(videoCodec)
add_subdirectory(input)
add_subdirectory(loader)
add_subdirectory(physics)
add_subdirectory(render)
add_subdirectory(windowContext)
